<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/football_score_board"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="normal" />


        <LinearLayout
            android:id="@+id/fullLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="470dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="24dp"
                    android:text="@string/home"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/zero"
                    android:textColor="#ffffff"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/touchdownButtonHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeTouchdown"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/fieldGoalButtonHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeFieldGoal"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/extraPointHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeExtraPoint"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/twoPointConversionHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeTwoPointConv"
                    android:text="@string/two_point_attempt" />

                <Button
                    android:id="@+id/safteyHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeSafety"
                    android:text="@string/safety" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="50dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="470dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="24dp"
                    android:text="@string/visitor"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/visitor_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/zero"
                    android:textColor="#ffffff"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/touchdownButtonVisitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="visitorTouchdown"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/fieldGoalButtonVisitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="visitorFieldGoal"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/extraPointVisitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="visitorExtraPoint"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/twoPointConversionVisitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="visitorTwoPointConv"
                    android:text="@string/two_point_attempt" />

                <Button
                    android:id="@+id/safteyVisitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="visitorSafety"
                    android:text="@string/safety" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/resetScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:onClick="resetScore"
            android:text="RESET" />
    </RelativeLayout>
</ScrollView>